--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.rahmania.sip_bdr">
+
+    <!--  Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:targetApi="n">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Classroom Detail Activity -->
+        <activity
+            android:name=".activity.ClassroomDetailActivity"
+            android:label="Detail Kelas" >
+        </activity>
+        <!-- Meeting Detail Activity -->
+        <activity
+            android:name=".activity.MeetingDetailActivity"
+            android:label="Detail Pertemuan" >
+        </activity>
+        <!-- Add Meeting Activity -->
+        <activity
+            android:name=".activity.AddMeetingActivity"
+            android:label="Tambah Pertemuan" >
+        </activity>
+        <!-- Edit Meeting Activity -->
+        <activity
+            android:name=".activity.EditMeetingActivity"
+            android:label="Edit Pertemuan" >
+        </activity>
+        <!-- Location Submission Detail Activity -->
+        <activity
+            android:name=".activity.LocationDetailActivity"
+            android:label="Detail Pengajuan Lokasi" >
+        </activity>
+        <!-- Change Password Activity -->
+        <activity
+            android:name=".activity.ChangePasswordActivity"
+            android:label="Ganti Password" >
+        </activity>
+
     </application>
 
 </manifest>
