--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
     <!--  Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -23,8 +21,7 @@
         tools:targetApi="n">
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name" />
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -51,28 +48,32 @@
         <!-- Add Meeting Activity -->
         <activity
             android:name=".activity.AddMeetingActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="Tambah Pertemuan" >
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <!-- Edit Meeting Activity -->
         <activity
             android:name=".activity.EditMeetingActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="Edit Pertemuan" >
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <!-- Location Submission Detail Activity -->
         <activity
             android:name=".activity.LocationDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="Detail Pengajuan Lokasi" >
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <!-- Change Password Activity -->
         <activity
             android:name=".activity.ChangePasswordActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="Ganti Password" >
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
 
+        <service
+            android:name=".helper.FirebaseMessageReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
